webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: mongo-simple
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp-image
          image: nanajanashia/k8s-demo-app:v1.0
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: mongo-simple
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30300
