webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: webapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-service
            port: 
              number: 80
